--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<span></span>
 			</a>
 			<li class="messenger">
-			<a href="m.me/s1ory.gg" target="_blank" data-messenger="messenger">
+			<a href="https://m.me/s1ory.gg" target="_blank" data-messenger="messenger">
 				<img src="img/messenger.svg" alt="messenger icon">
 				<span></span>
 			</a>
