--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 	<meta charset="UTF-8">
-	<title>Alexandr  Rasskazov - mssg.me</title>
+	<title>Alexandr  Rasskazov</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
