--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
 		</li>
 			</ul>				</div>
 				<!-- Links card -->
-				<div class="mssgme-links-card slideDown" style='display:none;'>
+				<div class="mssgme-links-card slideDown" >
 					
 					<ul class="mssgme-links-list more">
 
+														<li class="">
+										<a href="tel:+79994704050"" target="_blank" data-id="0">Позвонить</a>
+									</li>
+																	<li class="">
+										<a href="http://gimbarr540.000webhostapp.com/" target="_blank" data-url="http://gimbarr540.000webhostapp.com/" data-id="1">Оставить заявку</a>
+									</li>
 					
 					</ul>
 				</div>
