--- a/MASLENKOVA/index.html
+++ b/MASLENKOVA/index.html
@@ -63,7 +63,7 @@
 			</a>
 		</li>
 		<li class="viber">
-			<a href="viber://chat?number=+79136365300" target="_blank" data-messenger="viber">
+			<a href="http://r.mssg.me/?a=775a356e5730784e74747755556c7a6b5a34673d_587538686b7450436f46493335482b4174673d3d" target="_blank" data-messenger="viber">
 				<img src="img/viber.svg" alt="viber icon">
 				<span></span>
 			</a>
