--- a/MASLENKOVA/index.html
+++ b/MASLENKOVA/index.html
@@ -46,7 +46,7 @@
 										<a href="tel:+79136365300"" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="">
-										<a href="http://gimbarr540.000webhostapp.com/" target="_blank" data-url="http://gimbarr540.000webhostapp.com/" data-id="1">РАССЧИТАТЬ СТОИМОСТЬ ПОШИВА</a>
+										<a href="http://gimbarr540.000webhostapp.com/MASLENKOVA/" target="_blank" data-url="http://gimbarr540.000webhostapp.com/MASLENKOVA/" data-id="1">РАССЧИТАТЬ СТОИМОСТЬ ПОШИВА</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
