--- a/OZA/index.html
+++ b/OZA/index.html
@@ -47,7 +47,7 @@
 										<a href="tel:+79658716393"" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="">
-										<a href="http://gimbarr540.000webhostapp.com/MASLENKOVA/" target="_blank" data-url="http://gimbarr540.000webhostapp.com/MASLENKOVA/" data-id="1">ЗАПИСАТЬСЯ НА КУРС</a>
+										<a href="http://gimbarr540.000webhostapp.com/OZA/" target="_blank" data-url="http://gimbarr540.000webhostapp.com/OZA/" data-id="1">ЗАПИСАТЬСЯ НА КУРС</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
