--- a/VIZIR/index.html
+++ b/VIZIR/index.html
@@ -31,7 +31,7 @@
 				<div class="mssgme-card slideDown">
 					<div class="mssgme-card-header clearfix">
 						<div class="mssgme-card-header-photo">
-							<img src="img/1.jpg" alt="VIZIR">
+							<img src="img/1.JPG" alt="VIZIR">
 						</div>
 						<div class="mssgme-card-header-content">
 							<div class="mssgme-card-header-content-container">
