--- a/WATCH/index.html
+++ b/WATCH/index.html
@@ -5,7 +5,7 @@
 <head>
 
 	<meta charset="UTF-8">
-	<title>WATCH SHOP</title>
+	<title>Ч А С О В А Я⠀ ⠀Л А В К А</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
@@ -31,25 +31,27 @@
 				<div class="mssgme-card slideDown">
 					<div class="mssgme-card-header clearfix">
 						<div class="mssgme-card-header-photo">
-							<img src="img/2.png" alt="WATCH SHOP">
+							<img src="img/1.jpg" alt="WATCH SHOP">
 						</div>
 						<div class="mssgme-card-header-content">
 							<div class="mssgme-card-header-content-container">
-								<h1>WATCH SHOP</h1>
+								<h1>Ч А С О В А Я⠀ ⠀Л А В К А</h1>
 								<p>Время лучший подарок</p>
 							</div>
 						</div>
-					</div>
+					</div><h2 class="slideDown">До конца акции осталось</h2>
+				<script src="http://megatimer.ru/s/be630a34354b53aed965edf7f82577c8.js"></script><br>
 					<!-- Count filled buttons in loop and add class to list (messengers-count-3 for example) -->
-					<ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>		
+					<ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>	
 														<li class="">
-										<a href="tel:+79999999" target="_blank" data-id="0">Позвонить</a>
+										<a href="tel:+79131438348" target="_blank" data-id="0">Позвонить</a>
 									</li>
-																	<li class="">
+																	<li class="viber">
 										<a href="http://leadsdetect.com/WATCH/" target="_blank" data-url="http://leadsdetect.com/WATCH/" data-id="1">ПОЛУЧИТЬ ПОДАРОК</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
+				
 
 				<div class="mssgme-links-card slideDown" >
 					
@@ -57,7 +59,7 @@
 <ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>
 			
 		<li class="whatsapp">
-			<a href="https://api.whatsapp.com/send?phone=799999999" target="_blank" data-messenger="whatsapp">
+			<a href="https://api.whatsapp.com/send?phone=79131438348" target="_blank" data-messenger="whatsapp">
 				<img src="img/whatsapp.svg" alt="whatsapp icon">
 				<span></span>
 			</a>
