--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<!-- Intro -->
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
-			<img src="https://mssg.me/settings/img/bg/1-compressor.jpg" alt="Background image">
+			<img src="img/2.jpg" alt="Background image">
 		</div>
 					<div class="card-wrapper-inner">
 				<div class="card-intro">
@@ -58,7 +58,7 @@
 				<div class="mssgme-card slideDown">
 					<div class="mssgme-card-header clearfix">
 						<div class="mssgme-card-header-photo">
-							<img src="https://mssg.me/assets/fb_2249898245229932_1541401003.jpg" alt="Alexandr  Rasskazov">
+							<img src="img/1.jpg" alt="Alexandr  Rasskazov">
 						</div>
 						<div class="mssgme-card-header-content">
 							<div class="mssgme-card-header-content-container">
