--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<!-- Intro -->
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
-			<img src="img/2.mp4" alt="Background image">
+			<img src="img/2.gif" alt="Background image">
 		</div>
 					<div class="card-wrapper-inner">
 				<div class="card-intro">
