--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<a href="tel:+79994704050"" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="">
-										<a href="http://leadsdetect.com/" target="_blank" data-url="http://leadsdetect.com/" data-id="1">ПОЛУЧИТЬ БЕСПЛАТНЫЙ АУДИТ</a>
+										<a href="http://leadsdetect.com/STORY" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ПОЛУЧИТЬ БЕСПЛАТНЫЙ АУДИТ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
