--- a/MASLENKOVA/index.html
+++ b/MASLENKOVA/index.html
@@ -95,6 +95,8 @@
 			</a>
 		</li>
 				</ul>
+									 <!-- Реклама -->
+				</div>	<div class="ads logo rass"><a href="http://mssg.gq/" target="_blank" rel="noopener noreferrer"><img src="img/ads.png" alt="rasskazov logo"></a></div>
 				</div>
 			</div>
 		</div>
