--- a/MNEMO/index.html
+++ b/MNEMO/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<meta charset="UTF-8">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -28,9 +29,6 @@
 
   gtag('config', 'UA-115027442-4');
 </script>
-
-
-	<meta charset="UTF-8">
 	<title>MNEMO</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -97,6 +95,8 @@
 			</a>
 		</li>
 				</ul>
+				<!-- Реклама -->
+				</div>	<div class="ads logo rass"><a href="http://mssg.gq/" target="_blank" rel="noopener noreferrer"><img src="http://mssg.gq/img/ads.png" alt="rasskazov logo"></a></div>
 				</div>
 			</div>
 		</div>
