--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<meta charset="UTF-8">
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -28,10 +29,6 @@
 
   gtag('config', 'UA-115027442-4');
 </script>
-
-
-
-	<meta charset="UTF-8">
 	<title>Alexandr  Rasskazov</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -72,8 +69,11 @@
 														<li class="">
 										<a href="tel:+79994704050"" target="_blank" data-id="0">Позвонить</a>
 									</li>
-																	<li class="">
+																	<li class="viber">
 										<a href="http://leadsdetect.com/STORY" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ПОЛУЧИТЬ БЕСПЛАТНЫЙ АУДИТ</a>
+									</li>
+									<li class="form">
+										<a href="http://leadsdetect.com/form" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ХОЧУ ТАКУЮ ЖЕ ФОРМУ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
