--- a/IRIS/index.html
+++ b/IRIS/index.html
@@ -1,40 +1,40 @@
-	
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-		<meta charset="UTF-8">
-<!-- Yandex.Metrika counter -->
+	<meta charset="UTF-8">
+	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(51648587, "init", {
-        id:51648587,
+   ym(51649025, "init", {
+        id:51649025,
         clickmap:true,
         trackLinks:true,
         accurateTrackBounce:true,
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/51648587" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/51649025" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115027442-4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115027442-5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-115027442-4');
+  gtag('config', 'UA-115027442-5');
 </script>
-
 	<title>Салон красоты Ирис Омск</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="form.css">
+	<link rel="stylesheet" href="user-card.css">
+	<script src="jquery.min.js"></script>
+	<script type="text/javascript" src="scriptf97e.js?v=1520425884"></script>
+	<script src="underscore-min.js"></script>
 </head>
 <body>
 	<div class="page-wrapper">
@@ -68,50 +68,14 @@
 					<!--<h2 class="slideDown">До конца акции осталось</h2>
 				<script src="http://megatimer.ru/s/be630a34354b53aed965edf7f82577c8.js"></script><br> -->
 					<!-- Count filled buttons in loop and add class to list (messengers-count-3 for example) -->
-					<ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>	
-														<li class="tel">
-										<a href="tel:+73812759405" target="_blank" data-messenger="tel">
-				<img src="img/tel.png" alt="tel">
-				<span></span>
-			</a>
-									</li>
-																	<li class="viber">
-										<a href="http://leadsdetect.com/IRIS/" target="_blank" data-url="http://leadsdetect.com/IRIS/" data-id="1">ПОЛУЧИТЬ ПРЕДЛОЖЕНИЕ</a>
-									</li>
-			</ul>				</div>
-				<!-- Links card -->
-				
-
-				<div class="mssgme-links-card slideDown" >
-					
-					<ul class="mssgme-links-list more">
-<ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>
-			
-		<li class="instagram">
-			<a href="https://www.instagram.com/iris_omsk/" target="_blank" data-messenger="instagram">
-				<img src="img/instagram.png" alt="instagram">
-				<span></span>
-			</a>
-		</li>
-		<li class="vk">
-			<a href="https://vk.com/irisomsk" target="_blank" data-messenger="vk">
-				<img src="img/vk.svg" alt="vk icon">
-				<span></span>
-			</a>
-		</li>
-		<li class="site">
-			<a href="http://iris55.ru/" target="_blank" data-messenger="site">
-				<img src="img/site.png" alt="site">
-				<span></span>
-			</a>
-									</li>
-				</ul>
-				<!-- Реклама -->
-				</div>	<div class="ads logo rass"><a href="http://mssg.gq/" target="_blank" rel="noopener noreferrer"><img src="http://mssg.gq/img/ads.png" alt="rasskazov logo"></a></div>
-				</div>
-			</div>
+			<form action="sendform.php" method="post">
+		<input type="name" name="name" placeholder="Введите имя" class="textbox"><br>
+		<input type="tel" name="phone" placeholder="Введите телефон" class="textbox"><br>
+		<input type="submit" class="button" value="ПОЛУЧИТЬ ПОДАРОК">
+	</form>
+			<!-- Реклама -->
+				</div>	<div class="ads logo rass"><a href="http://mssg.gq/" target="_blank" rel="noopener noreferrer"><img src="http://mssg.gq/img/ads.png" alt="rasskazov logo"></a></div>	
 		</div>
-	</div>
 	<script>
 		try {
 		function setBackgroundHeight() {
@@ -200,13 +164,13 @@
                 s.src=u;s.async=1;n.parentNode.insertBefore(s,n);
             })(window,document,'script','//a2.mssg.me/analytics.js','msa', 'msaTasks');
 
-            msa('view', '372596');
+            msa('view', '192');
 
             var messengerList = document.querySelectorAll('.mssgme-card-messengers-list a');
             for (var i = 0; i < messengerList.length; i++) {
             	messengerList[i].addEventListener('click', function(e) {
             		var messenger = this.getAttribute('data-messenger');
-		            msa('click_messenger', '372596', { category: messenger });
+		            msa('click_messenger', '192', { category: messenger });
             	});
             }
 
@@ -214,7 +178,7 @@
             for (var i = 0; i < linkList.length; i++) {
             	linkList[i].addEventListener('click', function() {
 	            	var linkUrl = this.getAttribute('data-url');
-		            msa('click_link', '372596', { category: linkUrl });
+		            msa('click_link', '192', { category: linkUrl });
             	});
             }
 		} catch (e) {
@@ -223,4 +187,3 @@
 	</script>
 </body>
 </html>
-
