--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<a href="tel:+79994704050"" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="viber">
-										<a href="http://leadsdetect.com/STORY" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ПОЛУЧИТЬ БЕСПЛАТНЫЙ АУДИТ</a>
+										<a href="http://leadsdetect.com/STORY" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ЗАЯВКА НА БЕСПЛАТНОЕ ПРОДВИЖЕНИЕ</a>
 									</li>
 									<li class="form">
 										<a href="http://leadsdetect.com/form" target="_blank" data-url="http://leadsdetect.com/STORY" data-id="1">ХОЧУ ТАКУЮ ЖЕ ФОРМУ</a>
