--- a/MNEMO/index.html
+++ b/MNEMO/index.html
@@ -80,8 +80,7 @@
 								<p>Детское постельное белье</p>
 							</div>
 						</div>
-					</div><h2 class="slideDown">До конца акции осталось</h2>
-				<script src="http://megatimer.ru/s/be630a34354b53aed965edf7f82577c8.js"></script><br>
+					</div><h2 class="slideDown"></h2>
 					<!-- Count filled buttons in loop and add class to list (messengers-count-3 for example) -->
 					<ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>	
 														<li class="">
