--- a/MNEMO/index.html
+++ b/MNEMO/index.html
@@ -59,7 +59,7 @@
 			<!-- Intro -->
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
-			<img src="img/2.jpg" alt="Background image">
+			<img src="img/1.gif" alt="Background image">
 		</div>
 					<div class="card-wrapper-inner">
 				<div class="card-intro">
@@ -87,7 +87,7 @@
 										<a href="tel:+79620348990" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="viber">
-										<a href="http://leadsdetect.com/MNEMO/" target="_blank" data-url="http://leadsdetect.com/MNEMO/" data-id="1">КУПИТЬ СО СКИДКОЙ</a>
+										<a href="http://leadsdetect.com/MNEMO/" target="_blank" data-url="http://leadsdetect.com/MNEMO/" data-id="1">СДЕЛАТЬ ЗАКАЗ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
