--- a/STORY/successful.html
+++ b/STORY/successful.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Отправление, пожалуйста подождите...</title>
-	<meta http-equiv="refresh" content="3; url=http://mssg.gq/STORY/successful.html"> <!-- Редирект на главную страницу -->
+	<meta http-equiv="refresh" content="3; url=http://mssg.gq/"> <!-- Редирект на главную страницу -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
