--- a/STORY/1/index.html
+++ b/STORY/1/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="refresh" content="3; url=http://mssg.gq/"> <!-- Редирект на главную страницу -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="user-card.css">
-  <link rel="stylesheet" href="form.css">
+  <link rel="stylesheet" href="../user-card.css">
+  <link rel="stylesheet" href="../form.css">
   <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -36,7 +36,7 @@
       <!-- Intro -->
       <!-- Add class "img", if background image set, or gradients classes -->
           <div class="card-intro-bg img">
-      <img src="img/2.jpg" alt="Background image">
+      <img src="../img/2.jpg" alt="Background image">
     </div>
           <div class="card-wrapper-inner">
         <div class="card-intro">
@@ -49,7 +49,7 @@
         <div class="mssgme-card slideDown">
           <div class="mssgme-card-header clearfix">
             <div class="mssgme-card-header-photo">
-              <img src="img/1.jpg" alt="Alexandr  Rasskazov">
+              <img src="../img/1.jpg" alt="Alexandr  Rasskazov">
             </div>
             <div class="mssgme-card-header-content">
               <div class="mssgme-card-header-content-container">
