--- a/STORY/successful.html
+++ b/STORY/successful.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Отправление, пожалуйста подождите...</title>
-	<meta http-equiv="refresh" content="300; url=http://mssg.gq/"> <!-- Редирект на главную страницу -->
+  <meta charset="UTF-8">
+  <title>Отправление, пожалуйста подождите...</title>
+  <meta http-equiv="refresh" content="3; url=http://mssg.gq"> <!-- Редирект на главную страницу -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="user-card.css">
   <link rel="stylesheet" href="form.css">
   <!-- Facebook Pixel Code -->
@@ -61,5 +63,114 @@
       Спасибо!<br>Я свяжусь с Вами в ближайшее время!
         
     </div>
+  <script>
+    try {
+    function setBackgroundHeight() {
+      var introHeight = document.querySelector('.card-intro').clientHeight;
+      document.querySelector('.card-intro-bg').style.height = introHeight + 'px';
+    }
+
+    function fadeIntro() {
+      var cardIntro = document.querySelector('.card-intro');
+      
+        if ( document.querySelector('.card-wrapper-inner').scrollTop > 0 &&  document.querySelector('.card-wrapper-inner').scrollTop < cardIntro.clientHeight ) {
+            var opacity = document.querySelector('.card-wrapper-inner').scrollTop/cardIntro.clientHeight;
+
+            if ( opacity <= 1 ) {
+              cardIntro.style.opacity = 1 - opacity;
+              cardIntro.style.transform = 'translateY(' + opacity*50 + 'px)';
+            }
+        } else if ( document.querySelector('.card-wrapper-inner').scrollTop <= 0 ) {
+          cardIntro.style.opacity = 1;
+          cardIntro.style.transform = 'translateY(0)';
+        } else {
+            cardIntro.style.opacity = 0;
+        }
+    }
+
+    function toggleButtons(){
+      var buttonsList = document.querySelector('.mssgme-links-list'),
+        toggleBtn = document.querySelector('#expand_btns_btn'),
+        moreText = toggleBtn.getAttribute('data-more-text'),
+        lessText = toggleBtn.getAttribute('data-less-text');
+
+      if ( buttonsList.classList.contains('more') ) {
+        buttonsList.classList.remove('more');
+        toggleBtn.textContent = moreText;
+      } else {
+        buttonsList.classList.add('more');
+        toggleBtn.textContent = lessText;
+      }
+    }
+
+    // No bounce background function
+    function noBounceBg() {
+      if ( window.outerWidth < 768 ) {
+        document.querySelector('body').insertBefore( document.querySelector('.card-intro-bg'), document.querySelector('body').firstChild );
+      } else {
+        document.querySelector('.card-wrapper').insertBefore( document.querySelector('.card-intro-bg'), document.querySelector('.card-wrapper').firstChild );
+      }
+    }
+
+    // Animate elements function
+    function animateCardElements() {
+      setTimeout(function(){
+        document.querySelector('.card-intro-bg').classList.add('animated');
+        [].map.call(document.querySelectorAll('.slideDown'), function(el) {
+          el.classList.add('animated');
+        });
+      }, 100);
+    }
+
+    // On load
+    document.addEventListener('DOMContentLoaded', function(){
+      setBackgroundHeight();
+      noBounceBg();
+      animateCardElements();
+    });
+
+    // On resize
+    window.addEventListener('resize', function(){
+      setBackgroundHeight();
+      noBounceBg();
+    });
+
+    // On scroll
+    document.querySelector('.card-wrapper-inner').onscroll = function() {
+      fadeIntro();
+    };
+
+
+                  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-91479185-5', 'auto');
+      ga('send', 'pageview');
+                (function(w,d,s,u,m,t){
+                w[t]=w[t]||[];w[m]=w[m]||function(){w[t].push(arguments)};
+                var n=d.getElementsByTagName(s)[0];s=d.createElement('script');
+                s.src=u;s.async=1;n.parentNode.insertBefore(s,n);
+            })(window,document,'script','//a2.mssg.me/analytics.js','msa', 'msaTasks');
+
+            msa('view', '192');
+
+            var messengerList = document.querySelectorAll('.mssgme-card-messengers-list a');
+            for (var i = 0; i < messengerList.length; i++) {
+              messengerList[i].addEventListener('click', function(e) {
+                var messenger = this.getAttribute('data-messenger');
+                msa('click_messenger', '192', { category: messenger });
+              });
+            }
+
+          var linkList = document.querySelectorAll('.mssgme-links-list a');
+            for (var i = 0; i < linkList.length; i++) {
+              linkList[i].addEventListener('click', function() {
+                var linkUrl = this.getAttribute('data-url');
+                msa('click_link', '192', { category: linkUrl });
+              });
+            }
+    } catch (e) {
+      if ('console' in window) console.error(e);
+    }
+  </script>
 </body>
 </html>
