--- a/IRIS/index.html
+++ b/IRIS/index.html
@@ -93,7 +93,7 @@
 			</a>
 									</li>
 																	<li class="btn">
-										<a href="http://leadsdetect.com/IRIS/" target="_blank" data-url="http://leadsdetect.com/IRIS/" data-id="1">ПОЛУЧИТЬ ПРЕДЛОЖЕНИЕ</a>
+										<a href="form/index.html" target="_blank" data-url="form/index.html/" data-id="1">ПОЛУЧИТЬ ПРЕДЛОЖЕНИЕ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
