--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			</a>
 		</li>
 		<li class="whatsapp">
-			<a href="https://api.whatsapp.com/send?phone=79994704050" target="_blank" data-messenger="whatsapp">
+			<a href="https://api.whatsapp.com/send?phone=79994704050&text=Добрый день! Ищу SMM специалиста для продвижения своего профиля instagram" target="_blank" data-messenger="whatsapp">
 				<img src="img/whatsapp.svg" alt="whatsapp icon">
 				<span></span>
 			</a>
