--- a/MNEMO/form/index.html
+++ b/MNEMO/form/index.html
@@ -203,9 +203,9 @@
 			if ('console' in window) console.error(e);
 		}
 	</script>
-	<script src="../js/jquery.min.js"></script>
-	<script src="../js/jquery.maskedinput.js"></script>
-	<script src="../js/jquery.maskedinput.min.js"></script>
+	<script src="../../js/jquery.min.js"></script>
+	<script src="../../js/jquery.maskedinput.js"></script>
+	<script src="../../js/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript">
 		jQuery(function($){
 			$("#phone").mask("+7 (999) 999-9999");
