--- a/MNEMO/form/successful.html
+++ b/MNEMO/form/successful.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Отправление, пожалуйста подождите...</title>
-	<meta http-equiv="refresh" content="3; url=http://mssg.gq/WATCH"> <!-- Редирект на главную страницу -->
+	<meta http-equiv="refresh" content="3; url=http://mssg.gq/MNEMO"> <!-- Редирект на главную страницу -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
@@ -50,7 +50,7 @@
         <div class="mssgme-card slideDown">
           <div class="mssgme-card-header clearfix">
             <div class="mssgme-card-header-photo">
-              <img src="img/1.jpg" alt="WATCH SHOP">
+              <img src="img/1.jpg" alt="MNEMO.SHOP">
             </div>
             <div class="mssgme-card-header-content">
               <div class="mssgme-card-header-content-container">
@@ -58,8 +58,7 @@
                 <p>Детское постельное белье</p>
               </div>
             </div>
-          </div><h2 class="slideDown">До конца акции осталось</h2>
-        <script src="http://megatimer.ru/s/be630a34354b53aed965edf7f82577c8.js"></script><br>
+          </div><h2 class="slideDown"></h2>
           <!-- Count filled buttons in loop and add class to list (messengers-count-3 for example) -->
       Спасибо!<br>Мы свяжемся с Вами в ближайшее время!
         <!-- Реклама -->
