--- a/MNEMO/index.html
+++ b/MNEMO/index.html
@@ -72,7 +72,7 @@
 				<div class="mssgme-card slideDown">
 					<div class="mssgme-card-header clearfix">
 						<div class="mssgme-card-header-photo">
-							<img src="img/1.jpg" alt="WATCH SHOP">
+							<img src="img/1.jpg" alt="MNEMO.SHOP">
 						</div>
 						<div class="mssgme-card-header-content">
 							<div class="mssgme-card-header-content-container">
