--- a/MNEMO/index.html
+++ b/MNEMO/index.html
@@ -87,7 +87,7 @@
 										<a href="tel:+79620348990" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="viber">
-										<a href="http://leadsdetect.com/MNEMO/" target="_blank" data-url="http://leadsdetect.com/MNEMO/" data-id="1">СДЕЛАТЬ ЗАКАЗ</a>
+										<a href="http://mssg.gq/MNEMO/form/" target="_blank" data-url="http://mssg.gq/MNEMO/form/" data-id="1">СДЕЛАТЬ ЗАКАЗ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
