--- a/AURA.SPA/index.html
+++ b/AURA.SPA/index.html
@@ -87,7 +87,7 @@
 										<a href="tel:+74955026009" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="">
-										<a href="http://leadsdetect.com/AURA.SPA/" target="_blank" data-url="http://leadsdetect.com/AURA.SPA/" data-id="1">ЗАПИСАТЬСЯ СО СКИДКОЙ</a>
+										<a href="http://mssg.gq/AURA.SPA/form/" target="_blank" data-url="http://mssg.gq/AURA.SPA/form/" data-id="1">ЗАПИСАТЬСЯ СО СКИДКОЙ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
