--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
 										<a href="tel:+79994704050"" target="_blank" data-id="0">Позвонить</a>
 									</li>
 																	<li class="viber">
-										<a href="STORY/index.html" target="_blank" data-url="STORY/index.html" data-id="1">ЗАЯВКА НА БЕСПЛАТНОЕ ПРОДВИЖЕНИЕ</a>
+										<a href="STORY/index.html" target="_blank" data-url="STORY/index.html" data-id="1">Заказать обратный звонок</a>
 									</li>
 									<li class="form">
 										<a href="STORY/form.html" target="_blank" data-url="STORY/form.html" data-id="1">ХОЧУ ТАКУЮ ЖЕ ФОРМУ</a>
+									</li>
+									<li class="whatsapp">
+										<a href="https://goo.gl/6phKAs" target="_blank" data-url="https://goo.gl/6phKAs" data-id="1">ЗАЯВКА НА БЕСПЛАТНОЕ ПРОДВИЖЕНИЕ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
