--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 										<a href="STORY/form.html" target="_blank" data-url="STORY/form.html" data-id="1">ХОЧУ ТАКУЮ ЖЕ ФОРМУ</a>
 									</li>
 									<li class="whatsapp">
-										<a href="https://goo.gl/6phKAs" target="_blank" data-url="https://goo.gl/6phKAs" data-id="1">ЗАЯВКА НА БЕСПЛАТНЫЙ АУДИТ</a>
+										<a href="STORY/index.html" target="_blank" data-url="STORY/index.html" data-id="1">ЗАЯВКА НА БЕСПЛАТНЫЙ АУДИТ</a>
+									</li>
+									<li class="telegram">
+										<a href="https://goo.gl/6phKAs" target="_blank" data-url="https://goo.gl/6phKAs" data-id="1">ЗАЯВКА НА ПРОДВИЖЕНИЕ</a>
 									</li>
 			</ul>				</div>
 				<!-- Links card -->
