--- a/PERMANENT/successful.html
+++ b/PERMANENT/successful.html
@@ -16,7 +16,10 @@
   <!-- Intro -->
       <!-- Add class "img", if background image set, or gradients classes -->
           <div class="card-intro-bg img">
-      <img src="img/2.MOV" alt="Background image">
+     <video style="width: 100%; height: 100%;" preload="auto" autoplay="autoplay"  loop="loop" poster="img/2.jpg">
+        <source src="img/2.mp4" type="video/mp4">
+        </source>
+      </video>
     </div>
           <div class="card-wrapper-inner">
         <div class="card-intro">
