--- a/PERMANENT/index.html
+++ b/PERMANENT/index.html
@@ -42,7 +42,10 @@
 			<!-- Intro -->
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
-			<img src="img/2.MOV" alt="Background image">
+			<video style="width: 100%; height: 100%;" preload="auto" autoplay="autoplay"  loop="loop" poster="img/2.jpg">
+				<source src="img/2.mp4" type="video/mp4">
+				</source>
+			</video>
 		</div>
 					<div class="card-wrapper-inner">
 				<div class="card-intro">
@@ -81,7 +84,7 @@
 <ul class = 'mssgme-card-messengers-list clearfix messengers-count-1'>
 			
 		<li class="whatsapp">
-			<a href="https://api.whatsapp.com/send?phone=79136747530" target="_blank" data-messenger="whatsapp">
+			<a href="https://wa.me/79136747530?text=Добрый%20день!%20Я%20хотела%20бы%20записаться%20на%20консультацию." target="_blank" data-messenger="whatsapp">
 				<img src="img/whatsapp.svg" alt="whatsapp icon">
 				<span></span>
 			</a>
