--- a/PERMANENT/index.html
+++ b/PERMANENT/index.html
@@ -43,7 +43,7 @@
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
 			<video style="width: 100%; height: 100%;" preload="auto" autoplay="autoplay"  loop="loop" poster="img/2.jpg">
-				<source src="img/2.mp4" type="video/mp4">
+				<source src="https://gimbarr540.000webhostapp.com/2.mp4" type="video/mp4">
 				</source>
 			</video>
 		</div>
