--- a/PERMANENT/index.html
+++ b/PERMANENT/index.html
@@ -42,9 +42,10 @@
 			<!-- Intro -->
 			<!-- Add class "img", if background image set, or gradients classes -->
 					<div class="card-intro-bg img">
-			<video style="width: 100%; height: 100%;" preload="auto" autoplay="autoplay"  loop="loop" poster="img/2.jpg">
-				<source src="https://gimbarr540.000webhostapp.com/2.mp4" type="video/mp4">
-				</source>
+			<video style="width: 100%; height: 100%;" autoplay loop muted poster="img/2.jpg">
+				<source src="img/2.mp4" type="video/mp4">
+					<source src="img/2.webm" type="video/webm">
+						<source src="img/2.ogv" type="video/ogv">
 			</video>
 		</div>
 					<div class="card-wrapper-inner">
