--- a/PERMANENT/successful.html
+++ b/PERMANENT/successful.html
@@ -16,11 +16,7 @@
   <!-- Intro -->
       <!-- Add class "img", if background image set, or gradients classes -->
           <div class="card-intro-bg img">
-     <video style="width: 100%; height: 100%;" autoplay loop muted poster="img/2.jpg">
-        <source src="img/2.mp4" type="video/mp4">
-          <source src="img/2.webm" type="video/webm">
-            <source src="img/2.ogv" type="video/ogv">
-      </video>
+     <<img src="img/2.mp4">
     </div>
           <div class="card-wrapper-inner">
         <div class="card-intro">
