--- a/PERMANENT/successful.html
+++ b/PERMANENT/successful.html
@@ -16,7 +16,7 @@
   <!-- Intro -->
       <!-- Add class "img", if background image set, or gradients classes -->
           <div class="card-intro-bg img">
-     <<img src="img/2.mp4">
+     <img src="img/2.mp4">
     </div>
           <div class="card-wrapper-inner">
         <div class="card-intro">
